@@ -1,3 +1,8 @@
+2007-12-05  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/dbus.el (dbus-hash-table=): Allow nil as wildcard in the
+	interface and member fields.
+
 2007-12-05  Glenn Morris  <rgm@gnu.org>
 
 	* eshell/em-alias.el (pcomplete-stub): Define for compiler.
